--- a/statics/config/build.config.json
+++ b/statics/config/build.config.json
@@ -1,4 +1,4 @@
-{ 
-    "host_no_backslash": "http://members-dev.eosdac.io",
-    "meta_description": "Come to the eosDAC Member Client to register and interact with the DAC-enabling Decentralized Autonomous Community." 
+{
+	"host_no_backslash": "https://dac.eosusd.com",
+	"meta_description": "Come to the eosUSD Member Client to register and join the community."
 }
