rebrand to VIGOR

--- a/statics/config/build.config.json
+++ b/statics/config/build.config.json
@@ -1,4 +1,4 @@
 {
-	"host_no_backslash": "https://dac.eosusd.com",
-	"meta_description": "Come to the eosUSD Member Client to register and join the community."
+	"host_no_backslash": "https://vig.ai",
+	"meta_description": "Come to the VIGOR Member Client to register and join the community."
 }
