--- a/statics/config/config.mainnet.json
+++ b/statics/config/config.mainnet.json
@@ -73,13 +73,13 @@
         "default_eos_node": "https://proxy.eosnode.tools:443",
         "bpnodes": "https://eosdac.io/topnodes.json",
         "memberclient": "https://toolkit-api.eosdac.io",
-        "memberclient_state_api": "https://api-dac.eosusd.com/v1/eosdac",
+        "memberclient_state_api": "https://api-dac.vig.ai/v1/eosdac",
         "firehose": "ws://bos.eosdac.io:1337"
     },
 
     "external":{
-        "homepage": "https://eosdac.io",
-        "discord": "https://discord.io/eosdac",
+        "homepage": "https://eosusd.com/eosUSD.pdf",
+        "discordUrl": "https://t.me/eosUSDcom",
         "explorer": "https://bloks.io",
         "dacexplorer": "https://explorer.eosdac.io"
     }
