--- a/statics/config/config.jungle.json
+++ b/statics/config/config.jungle.json
@@ -32,6 +32,9 @@
         },
         "escrow":{
             "name": "dacholding11"
+        },
+        "airburn":{
+            "name": "vigairburn13"
         }
           
     },
